--- a/hm-section.css
+++ b/hm-section.css
@@ -105,3 +105,71 @@ div.sec1-div p {
         margin: 0 30px;
     }
 }
+
+/* section 2 */
+.sec2-div {
+    text-align: center;
+    margin: auto;
+}
+
+.sec2-div h4{
+    font-size: 18px;
+    margin-bottom: 23px;
+    font-weight: bold;
+}
+
+.sec2-div p {
+    margin-bottom: 24px;
+}
+.sec2-div-img {
+    position: relative;
+    margin: 10px;
+}
+
+.sec2-div-img img {
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+}
+
+.sec2-row2-txt {
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    background-color: transparent;
+    position: absolute;
+    top: 0;
+}
+
+.sec2-row2-txt h2 {
+    color: #fff;
+    position: inherit;
+    bottom: 0;
+    left: 50%;
+    opacity: 0;
+    transform: translate(-50%);
+    transition: 1s;
+}
+
+.sec2-row2-txt:hover h2 {
+    bottom: 50%;
+    opacity: 1;
+}
+
+.sec2-row2-txt:hover {
+    background-color: rgb(235, 0, 0, 0.7);
+    transition: 0.5s;
+}
+
+/* section 2 responsive */
+@media only screen and (max-width : 680px) {
+    div.sec2.col-3 {
+        width: 100%;
+        padding: 0 56px;
+    }
+    
+    .sec2-div {
+        padding: 35px;
+    }
+
+}
