--- a/hm-section.css
+++ b/hm-section.css
@@ -17,7 +17,7 @@
     width: 100%;
     margin: auto;
     padding-top: 2%;
-    padding-bottom: 4%;
+    padding-bottom: 2%;
 }
 
 .row {
@@ -172,4 +172,74 @@ div.sec1-div p {
         padding: 35px;
     }
 
+}
+
+/* section 3 */
+
+.section3-hd-txt  {
+text-align: center;
+justify-content: space-between;
+}
+
+.section3-hd-txt h3 {
+    font-size: 42px;
+    margin-bottom: 23px;
+}
+
+.section3-col {
+    text-align: center;
+    margin-top: 30px;
+    justify-content: center;
+}
+
+.section3-col .section3-col-img img {
+    width: 345px;
+    height: 303px;
+    border-radius: 10px;
+}
+
+.section3-col-txt {
+    text-align: left;
+    margin: auto 0 auto 15px;
+}
+
+.section3-col-txt h4 {
+    font-size: 18px;
+    margin: 10px auto  20px;
+}
+
+/* responsiveness for section3 */
+
+@media only screen and (max-width:680px) {
+    div.section3 {
+        width: 100%;
+        text-align: center;
+    }
+
+    .section3-hd-txt {
+        padding: 35px;
+    }
+
+    .section3-col .section3-col-img img {
+        width: 80%;
+        height: 339px;
+
+    }
+
+    .section3-col-txt {
+        text-align: left;
+        padding:0 5%;
+    }
+}
+
+
+/* section 4  */
+.sec4-txt {
+    text-align: center;
+    width: 80%;
+}
+
+.sec4-txt h4 {
+    font-size: 24px;
+    margin-bottom: 20px;
 }
