--- a/hm-section.css
+++ b/hm-section.css
@@ -237,9 +237,73 @@ justify-content: space-between;
 .sec4-txt {
     text-align: center;
     width: 80%;
+    margin-bottom: 3rem;
 }
 
 .sec4-txt h4 {
     font-size: 24px;
+    margin-top: 5rem;
     margin-bottom: 20px;
+}
+
+.sec4-col{
+    width: 30%;
+    height: 100%;
+    padding: 10px;
+    background-color: rgb(253, 243, 243);
+    margin: 10px auto 10px;
+    border-radius: 10px;
+    display: flex;
+}
+
+.sec4-col img {
+    margin: 0 20px ;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+
+.user-cmnt h3 {
+    margin: 30px 0;
+
+}
+
+/* responsive sec4 */
+
+@media only screen and (max-width:680px) {
+    .sec4-col {
+        width: 75%;
+        margin: 20px 0;
+    }
+
+}
+
+
+/* section 9 */
+
+.enroll {
+    width: 80%;
+    text-align: center;
+    background-image:linear-gradient(rgb(0,0,0,0.7),rgb(0,0,0,0.7)),url(images/banner2.jpg);
+    background-size: cover;
+    background-position: center;
+    margin: 100px auto;
+    padding: 80px 0;
+    border-radius: 10px;
+
+}
+
+.enroll h2 {
+    color: #fff;
+    margin: 10px;
+}
+
+.enroll-txt {
+    border: 1px #fff solid;
+    box-sizing: border-box;
+    padding: 10px 30px;
+    margin-top: 40px;
+    background-color: transparent;
+    color:#fff ;
 }
