--- a/hm-section.css
+++ b/hm-section.css
@@ -1,33 +1,3 @@
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 27%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
-
-
-.container {
-    width: 100%;
-    margin: auto;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-
-.row {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
 
 /* section 1 */
 
@@ -249,7 +219,7 @@ justify-content: space-between;
 .sec4-col{
     width: 30%;
     height: 100%;
-    padding: 10px;
+    padding: 20px;
     background-color: rgb(253, 243, 243);
     margin: 10px auto 10px;
     border-radius: 10px;
@@ -280,7 +250,7 @@ justify-content: space-between;
 }
 
 
-/* section 9 */
+/* section 5 */
 
 .enroll {
     width: 80%;
@@ -306,4 +276,10 @@ justify-content: space-between;
     margin-top: 40px;
     background-color: transparent;
     color:#fff ;
+    transition: 1s;
 }
+
+.enroll-txt:hover {
+    background-color: rgb(196, 25, 25);
+}
+
