--- a/index.css
+++ b/index.css
@@ -2,12 +2,42 @@
 *{
     margin: 0;
     padding: 0;
-    border: 0;
     font-family: 'Poppins', sans-serif;
 
 }
 
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 27%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
 
+
+
+.container {
+    width: 100%;
+    margin: auto;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+.row {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+/* header of the website */
 
 .header{
     min-height: 100vh;
@@ -95,49 +125,62 @@ div.menu-div  li.dropdownicon {
 
 .remove-mnu a {
     display: none ;
+    font-size: larger;
 }
 /* responsive navbar */
 
 @media only screen and (max-width: 680px) {
+    .menu-div ul li a:hover::after{
+        width: 0;
+    }
+
     .menu-div ul li  {
-        display: none;
+        display: block;
+        transition: 1s;
     }
      
     nav.nav {
         padding: 2% 0;
     }
     div.menu-div  li.dropdownicon a{
-    position: absolute;
+    position: fixed;
     display: block; 
     float: right;
-    top: 25px;
-    right: 30px;
+    top: 35px;
+    right: 10%;
     font-weight: 900;
-    
+    z-index: 1;
+    background-color: #0B1F34;
+    padding: 10px;
+    border-radius: 5px;
+
     }
 
 
    
-    div.menu-div.responsive { 
+    div.menu-div ul { 
+    display: block;
     position: fixed;
-    top: 0;
-    right: 0;
-    background-color:#E74133;
+    top: 0 ;
+    right: -200px;
+    background-color:rgb(224, 16, 33);
     padding: 0;
     min-width: 180px;
     min-height: 100vh;
     padding-top: 70px;
     z-index: 2;
     margin: 0;
+    text-align: left;
     transition: 1s;
-    transition-property: none;
    }
+
+   div.menu-div ul.ulrep {
+    right: 0;
+   } 
    
-    .menu-div.responsive ul  {
-      text-align: left;
-    }
+
+   
    .menu-div.responsive ul li  {
-    display: block;
     border-bottom: 1px solid #fff;
     padding-bottom: 17px;
     margin-left: 20px;
@@ -187,6 +230,11 @@ div.wlcm-txt h1{
     border: 1px solid #fff;
     background-color: transparent;
     margin-top: 30px;
+    transition: 1s;
+}
+
+.visit-us:hover {
+    background-color: rgb(255, 0, 0,0.8);
 }
 
 @media only screen and (max-width: 680px) {
@@ -202,3 +250,96 @@ div.wlcm-txt h1{
 }
 
 
+
+/* footer for website */
+.footer {
+    position: relative;
+    padding-bottom: 50px ;
+    margin-top: 150px;
+    height: fit-content;
+}
+
+.ft-txt {
+    justify-content: center;
+    width: 80%;
+    display: block;
+    text-align: center;
+    color: #fff;
+}
+
+.ft-txt h2 {
+    color: #ffffff;
+}
+
+.custom-shape-divider-bottom-1677587616 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+    z-index: -5;
+}
+
+.custom-shape-divider-bottom-1677587616 svg {
+    position: relative;
+    display: block;
+    width: calc(300% + 1.3px);
+    height: 430px;
+}
+
+.custom-shape-divider-bottom-1677587616 .shape-fill {
+    fill: #122C4B
+}
+
+
+.copywright {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+    height: 75px;
+    background-color: #0B1F34;
+}
+
+.copywright div {
+    margin: 25px;
+    color: #fff;
+}
+
+.designer {
+    font-weight: 600;
+}
+
+.app span {
+    color: rgb(1, 70, 232);
+    font-style: oblique;
+}
+.icons i {
+    margin: 0 20px 10px;
+
+}
+
+/** For tablet devices **/
+@media (min-width: 768px) and (max-width: 1023px) {
+    .custom-shape-divider-bottom-1677587616 svg {
+        width: calc(300% + 1.3px);
+        height: 430px;
+    }
+}
+
+/** For mobile devices **/
+@media (max-width: 767px) {
+    .custom-shape-divider-bottom-1677587616 svg {
+        width: calc(300% + 1.3px);
+        height: 500px;
+    }
+}
+
+
+@media (max-width:680px) {
+    .copywright {
+        font-size: 8px;
+    }
+}
