--- a/css/hm-section.css
+++ b/css/hm-section.css
@@ -1,4 +1,3 @@
-
 /* section 1 */
 
 
@@ -8,7 +7,7 @@
     margin: 75px auto 0;
 }
 
-.sec1-txt h3{
+.sec1-txt h3 {
     font-size: 32px;
     font-weight: 700;
     margin: 16px;
@@ -38,16 +37,16 @@ div.sec1-div:hover {
     transition: 1s;
 }
 
-div.sec1-div h4{
-   margin-bottom: 20px;
-   font-size: 19px;
-   font-weight: 700;
+div.sec1-div h4 {
+    margin-bottom: 20px;
+    font-size: 19px;
+    font-weight: 700;
 }
 
 div.sec1-div p {
-  font-size: 16px;
-  line-height: 21px;
-  font-weight: 400;
+    font-size: 16px;
+    line-height: 21px;
+    font-weight: 400;
 }
 
 
@@ -70,6 +69,7 @@ div.sec1-div p {
         font-size: 15px;
 
     }
+
     .sec1-txt p {
         font-size: 16px;
         margin: 0 30px;
@@ -82,7 +82,7 @@ div.sec1-div p {
     margin: auto;
 }
 
-.sec2-div h4{
+.sec2-div h4 {
     font-size: 18px;
     margin-bottom: 23px;
     font-weight: bold;
@@ -91,6 +91,7 @@ div.sec1-div p {
 .sec2-div p {
     margin-bottom: 24px;
 }
+
 .sec2-div-img {
     position: relative;
     margin: 10px;
@@ -137,7 +138,7 @@ div.sec1-div p {
         width: 100%;
         padding: 0 56px;
     }
-    
+
     .sec2-div {
         padding: 35px;
     }
@@ -146,9 +147,9 @@ div.sec1-div p {
 
 /* section 3 */
 
-.section3-hd-txt  {
-text-align: center;
-justify-content: space-between;
+.section3-hd-txt {
+    text-align: center;
+    justify-content: space-between;
 }
 
 .section3-hd-txt h3 {
@@ -175,7 +176,7 @@ justify-content: space-between;
 
 .section3-col-txt h4 {
     font-size: 18px;
-    margin: 10px auto  20px;
+    margin: 10px auto 20px;
 }
 
 /* responsiveness for section3 */
@@ -198,7 +199,7 @@ justify-content: space-between;
 
     .section3-col-txt {
         text-align: left;
-        padding:0 5%;
+        padding: 0 5%;
     }
 }
 
@@ -216,7 +217,7 @@ justify-content: space-between;
     margin-bottom: 20px;
 }
 
-.sec4-col{
+.sec4-col {
     width: 30%;
     height: 100%;
     padding: 20px;
@@ -227,7 +228,7 @@ justify-content: space-between;
 }
 
 .sec4-col img {
-    margin: 0 20px ;
+    margin: 0 20px;
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -255,7 +256,7 @@ justify-content: space-between;
 .enroll {
     width: 80%;
     text-align: center;
-    background-image:linear-gradient(rgb(0,0,0,0.7),rgb(0,0,0,0.7)),url(images/banner2.jpg);
+    background-image: linear-gradient(rgb(0, 0, 0, 0.7), rgb(0, 0, 0, 0.7)), url(../images/banner2.jpg);
     background-size: cover;
     background-position: center;
     margin: 100px auto;
@@ -275,11 +276,10 @@ justify-content: space-between;
     padding: 10px 30px;
     margin-top: 40px;
     background-color: transparent;
-    color:#fff ;
+    color: #fff;
     transition: 1s;
 }
 
 .enroll-txt:hover {
     background-color: rgb(196, 25, 25);
 }
-
