--- a/css/about.css
+++ b/css/about.css
@@ -10,8 +10,9 @@
 }
 
 div.wlcm-txt h1 {
-    margin-top: 60px;
+    margin-top: 90px;
     font-size: 34px;
+    font-weight: 700;
 }
 
 
@@ -72,4 +73,10 @@ div.wlcm-txt h1 {
   .wrapper1 {
     margin-bottom: 200px;
   }
+
+  div.wlcm-txt h1 {
+    margin-top: 90px;
+    font-size: 24px;
+    font-weight: 600;
+}
 }
