--- a/css/about.css
+++ b/css/about.css
@@ -1,9 +1,9 @@
 /* header for the about page */
 
-.header{
+.header {
     min-height: 50vh;
     min-width: 100%;
-    background-image: linear-gradient(rgba(1.4,9,30,0.6),rgba(1.4,9,30,0.6)),url(../images/background.jpg);
+    background-image: linear-gradient(rgba(1.4, 9, 30, 0.6), rgba(1.4, 9, 30, 0.6)), url(../images/background.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -29,6 +29,7 @@ div.wlcm-txt h1 {
 .col-4 {
     padding: 0 1%;
 }
+
 .abt-txt h1 {
     font-size: 34px;
     margin-bottom: 20px;
@@ -52,9 +53,9 @@ div.wlcm-txt h1 {
     color: #FFF;
 }
 
-.abt-img  {
-   width: 38.5% ;
-   height: 26.3%;
+.abt-img {
+    width: 38.5%;
+    height: 26.3%;
 }
 
 .abt-img img {
@@ -64,19 +65,19 @@ div.wlcm-txt h1 {
 
 
 @media (max-width: 700px) {
-  .wrapper1 div {
-    width: 80%;
-    padding: 2.5% 0;
+    .wrapper1 div {
+        width: 80%;
+        padding: 2.5% 0;
 
-  }
+    }
 
-  .wrapper1 {
-    margin-bottom: 200px;
-  }
+    .wrapper1 {
+        margin-bottom: 200px;
+    }
 
-  div.wlcm-txt h1 {
-    margin-top: 90px;
-    font-size: 24px;
-    font-weight: 600;
-}
+    div.wlcm-txt h1 {
+        margin-top: 90px;
+        font-size: 24px;
+        font-weight: 600;
+    }
 }
